--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,8 +1,57 @@
+// variables
+$container-bg: #f3f3f3;
+$cva-yellow: rgba(243, 205, 48, 1);
+$cva-turcoise: rgba(16, 124, 46, 1);
+$cva-purple: rgba(171, 0, 174, 1);
+$cva-blue: rgba(1, 35, 145, 1);
 
-*{
-    color: purple;
+$base: 6px;
+
+$spacing: $base * 1;
+$spacing2: $base * 2;
+$spacing3: $base * 3;
+$spacing4: $base * 4;
+$spacing5: $base * 5;
+$spacing6: $base * 6;
+
+.scale__img {
+  height: 50vh;
+  max-height: 350px;
 }
-.scale__img{
-    height: 30vh;
-    
+
+nav.navbar {
+  a {
+    color: #fff;
+  }
 }
+
+.container {
+    position: relative;
+    z-index: 10;
+    overflow: auto;
+    display: flex;
+    [class^="col-"]{
+        background: $container-bg;
+        min-height: 500px;
+        padding: $spacing4;
+        box-shadow: 0px 0px 4px transparentize($cva-blue, 0.4);
+    }
+
+}
+body{
+    min-height: 100vh;
+    position: relative;
+    &:after{
+        content: "";
+        background: url(elementen_CVA-netwerk.svg) no-repeat;
+        // background-position: 0% 100%;
+        background-size: cover;
+        height: 100vh;
+        width: 100vw;
+        position: absolute;
+        opacity:0.3;
+        top: 0;
+        z-index: -1;
+    }
+}
+
