--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,40 @@
-* {
-  color: purple;
+.scale__img {
+  height: 50vh;
+  max-height: 350px;
 }
 
-.scale__img {
-  height: 30vh;
+nav.navbar a {
+  color: #fff;
+}
+
+.container {
+  position: relative;
+  z-index: 10;
+  overflow: auto;
+  display: flex;
+}
+
+.container [class^="col-"] {
+  background: #f3f3f3;
+  min-height: 500px;
+  padding: 24px;
+  box-shadow: 0px 0px 4px rgba(1, 35, 145, 0.6);
+}
+
+body {
+  min-height: 100vh;
+  position: relative;
+}
+
+body:after {
+  content: "";
+  background: url(elementen_CVA-netwerk.svg) no-repeat;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  opacity: 0.3;
+  top: 0;
+  z-index: -1;
 }
 /*# sourceMappingURL=styles.css.map */
